<resources>
    <string name="app_name">Comicable</string>
    <!-- Strings for login -->
    <string name="SERVER_CLIENT_ID">1069372916268-ioe76regr5c5s3g0prlorud1jrsvca8p.apps.googleusercontent.com</string>
    <string name="LOGIN_SUCCESSFUL">Login Success</string>
    <string name="LOGIN_FAILED">Login Failed, Please Try Again!</string>
    <string name="LOGIN_CANCELED">Login Canceled</string>
    <string name="NETWORK_ERROR">Network Error. Try Again Later!</string>
    <string name="LOGOUT_SUCCESSFUL">Logout Success</string>
    <string name="ONE_TAP_UI_ERROR">OneTapUI Failed Due To Too Many Canceled Sign-In Attempts</string>
    <string name="UPDATE_USER_SUCCESSFUL">Profile Has Been Updated</string>
    <string name="UPDATE_USER_FAILED">Update Failed, Please Try Again</string>
    <!-- Strings for api -->
    <string name="MANGA_API_BASE_URL">https://komiku-api.fly.dev/api/comic/</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_activity_series">Penulis :</string>
    <string name="artist_activity_series">Artis :</string>
    <string name="rating_activity_series">Rating :</string>
    <string name="release_activity_series">Release :</string>
    <string name="genres_activity_series">Genres :</string>
    <string name="synopsis_activity_series">Sinopsis :</string>
    <string name="chapters_activity_series">Chapters</string>
    <string name="hint_title_comic">Title</string>
    <string name="hint_alternative_comic">Alternative</string>
    <string name="hint_type_comic">Tipe</string>
    <string name="hint_status_comic">Status</string>
    <string name="hint_author_comic">Nama Author</string>
    <string name="hint_artist_comic">Tim Artis</string>
    <string name="hint_rating_comic">5 / 5 out of 191</string>
    <string name="hint_rank_comic">1st in Comics</string>
    <string name="hint_release_comic">2023</string>
    <string name="hint_genre_comic">Action, Adventure, Comedy</string>
    <string name="hint_synopsis_comic">Sinopsis</string>
    <string name="hint_chapter_title">Chapter-00</string>
    <string name="text_button_checkpoint_activity_series">Continue Reading...</string>
    <string name="content_desc_iv_thumbnail_activity_series">Thumbnail of Series</string>
    <string name="content_desc_background_color_accent">Circlish Background Color Accent</string>
    <string name="content_desc_iv_collection_activity_series">Add/Remove to/from Collection</string>
    <string name="content_desc_floating_action_button">Floating Action Button</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_search">Search</string>
    <string name="navigation_title_collection">Collection</string>
    <string name="navigation_title_project">Project</string>
    <string name="text_mirror_fragment_home">Mirror</string>
    <string name="text_latest_fragment_home">Terbaru</string>
    <string name="text_trending_fragment_home">Sedang Hangat</string>
    <string name="text_tv_login_activity_login">Login Here!</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_password">Password</string>
    <string name="hint_button_login">Login</string>
    <string name="hint_button_register_activity_login">Click Here To Register</string>
    <string name="hint_tv_or_activity_login">OR</string>
    <string name="hint_tv_toolbar_main_toolbar">User Name</string>
    <string name="hint_tv_register_activity_register">Register Your Account</string>
    <string name="hint_et_first_name">First Name</string>
    <string name="hint_et_last_name">Last Name</string>
    <string name="text_button_register_activity_register">Register Now!</string>
    <string name="hint_et_search_fragment_search">Cari Komik</string>
    <string name="hint_search_success_fragment_search">Hasil Pencarian</string>
    <string name="hint_search_failed_fragment_search">Tidak Menemukan Hasil</string>
    <string name="hint_tv_project_fragment_project">Project</string>
    <string name="hint_button_series_cv_project">See More...</string>
    <string name="hint_tv_collection_fragment_collection">Collection</string>
    <!--  array  -->
    <string-array name="empty_array"/>
</resources>