<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_project"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <!--
            TODO:
                Create a new background specific to all iv_thumbnails for the series
        -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_thumbnail_cv_project"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_cv_project"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:hint="@string/hint_title_comic"
            app:layout_constraintTop_toTopOf="@id/iv_thumbnail_cv_project"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail_cv_project"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type_cv_project"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:hint="@string/hint_type_comic"
            app:layout_constraintTop_toBottomOf="@id/tv_title_cv_project"
            app:layout_constraintStart_toStartOf="@id/tv_title_cv_project"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_series_cv_project"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/hint_button_series_cv_project"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/button_chapter_activity_series"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_chapter_cv_project"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:text="@string/hint_chapter_title"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/button_chapter_activity_series"
            app:layout_constraintStart_toStartOf="@id/tv_title_cv_project"
            app:layout_constraintBottom_toBottomOf="@id/iv_thumbnail_cv_project"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>